<resources>
    <string name="app_name">Darts Tracker</string>

    <string name="desc">An image of a dartboard</string>

    <string name="numberOfPlayers">How many people are playing?</string>

    <string name="playerOne">Player 1</string>

    <string name="playerTwo">Player 2</string>

    <string name="playerThree">Player 3</string>

    <string name="playerFour">Player 4</string>

    <string name="scoreInput">Score</string>

    <string name="enterButton">Enter</string>

    <string name="validScoreInput">PLEASE ENTER A VALID NUMBER</string>

    <string name="validFinalShot">YOU MUST FINISH ON A DOUBLE</string>

    <string name="scoresButton">CHECK SCORES</string>

    <string name="numberOfTurns">TURN</string>

    <string name="individualScores">SCORE</string>

    <string name="gameIsWon">CONGRATULATIONS!</string>

    <string name="scoreOverZero">TOO HIGH A SCORE!</string>

    <string name="nomalTextSizeThreePlayer">32f</string>

    <string name="boldTextSizeThreePlayer">40f</string>

    <string name="resetGame">RESET GAME</string>

    <string name="undo">UNDO</string>

    <string name="whichStartingScorePopupTitle">STARTING SCORE</string>

    <string name="cancelButtonStartingScorePopup">CANCEL</string>

    <string name="score301">301</string>

    <string name="score501">501</string>

    <string name="score701">701</string>
    
    <string name="scoreHistory">SCORE HISTORY</string>
</resources>
