<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colourGreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:text="@string/playerOne"
                android:textColor="@color/colourWhite"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/playerOneScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colourWhite"
                android:textSize="32sp"
                tools:text="501" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:text="@string/playerTwo"
                android:textColor="@color/colourWhite"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/playerTwoScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colourWhite"
                android:textSize="32sp"
                tools:text="501" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="32dp"
        android:text="@string/scoreInput"
        android:textColor="@color/colourWhite"
        android:textSize="32dp" />

    <EditText
        android:id="@+id/singleScore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colourWhite"
        android:textSize="32dp"
        tools:text="180" />

    <Button
        android:id="@+id/enterScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enterButton"
        android:textSize="32dp" />

</LinearLayout>