<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_four_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colourGreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerOneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:text="@string/playerOne"
                android:textColor="@color/colourWhite"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/playerOneScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/colourWhite"
                android:textSize="32sp"
                tools:text="501" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:background="@android:color/black"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerTwoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:text="@string/playerTwo"
                android:textColor="@color/colourWhite"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/playerTwoScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/colourWhite"
                android:textSize="32sp"
                tools:text="501" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerThreeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:text="@string/playerThree"
                android:textColor="@color/colourWhite"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/playerThreeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/colourWhite"
                android:textSize="32sp"
                tools:text="501" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:background="@android:color/black"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerFourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:text="@string/playerFour"
                android:textColor="@color/colourWhite"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/playerFourScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/colourWhite"
                android:textSize="32sp"
                tools:text="501" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:textStyle="bold"
        android:text="@string/scoreInput"
        android:textColor="@color/colourWhite"
        android:textSize="32dp" />

    <EditText
        android:id="@+id/singleScore"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colourWhite"
        android:textSize="32dp"
        tools:text="180" />

    <Button
        android:backgroundTint="@color/colourWhite"
        android:id="@+id/enterScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enterButton"
        android:textSize="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:text="@string/numberOfTurns"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colourWhite"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/individualScores"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colourWhite"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
        </View>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberOfTurns"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colourWhite"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/individualScores"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colourWhite"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
        </View>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:text="@string/numberOfTurns"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colourWhite"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/individualScores"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colourWhite"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
        </View>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberOfTurns"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colourWhite"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/individualScores"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colourWhite"/>

    </LinearLayout>

    <ListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/list_four_players"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>